--- a/Core/Object Arts/Dolphin/Base/Supermercado.cls
+++ b/Core/Object Arts/Dolphin/Base/Supermercado.cls
@@ -1,7 +1,7 @@
 ﻿"Filed out from Dolphin Smalltalk 7"!
 
 Object subclass: #Supermercado
-	instanceVariableNames: 'nombre clientes empleados productos facturas'
+	instanceVariableNames: 'nombre clientes empleados productos carritos'
 	classVariableNames: ''
 	poolDictionaries: ''
 	classInstanceVariableNames: ''!
@@ -10,6 +10,10 @@ Supermercado comment: ''!
 !Supermercado categoriesForClass!Kernel-Objects! !
 !Supermercado methodsFor!
 
+agregarCarrito:unCarrito
+"Agrega un empleado"
+carritos add:unCarrito.!
+
 agregarCliente:unCliente
 "Agrega un cliente"
 clientes add:unCliente.!
@@ -17,10 +21,6 @@ clientes add:unCliente.!
 agregarEmpleado:unEmpleado
 "Agrega un empleado"
 empleados add:unEmpleado.!
-
-agregarFactura:unFactura
-"Agrega un empleado"
-facturas add:unFactura.!
 
 agregarProductoSupermercado:unProducto
 "Agrega un empleado"
@@ -41,7 +41,7 @@ nombre:=unNom.
 clientes:= OrderedCollection new.
 empleados:= OrderedCollection new.
 productos:= OrderedCollection new.
-facturas:= OrderedCollection new.!
+carritos := OrderedCollection new.!
 
 listarClientes
     | a identificador nom apellido|
@@ -58,22 +58,6 @@ listarClientes
                     Transcript
                         show: a , ') Identificador[ ' , identificador , ' ] ' , nom , ' $' , apellido , ']';
                         cr]]!
-
-listarProductos
-	| a identificador nom precio stock |
-	1 to: productos size
-		do: 
-			[:i |
-			(productos at: i) verStock > 0
-				ifTrue: 
-					[a := i printString.
-					identificador := (productos at: i) verIdentificador printString.
-					nom := (productos at: i) verNombre printString .
-					precio := (productos at: i) verPrecio printString.
-					stock := (productos at: i) verStock printString.
-					Transcript
-						show: a , ') Identificador[' , identificador , '] ' , nom , ' $' , precio , ' Stock[' , stock , ']';
-						cr]]!
 
 listarProductosDisponible
 	| product cont a identificador nom precio stock |
@@ -122,7 +106,27 @@ stock:=(productos at: i) verStock printString.
 Transcript show: a,') Identificador[',identificador,'] ', nom, ' $', precio ,' Stock[', stock, ']'; cr.] ].
 !
 
-llamarMenuPrincipal!
+llamarMenuPrincipal
+Transcript show: 'MENU SUPERMERCADO
+0)salir
+1)Mostrar Productos
+2)Ver Carrito
+3)Ir a Pagar'.!
+
+procesoCargarCarrito:carrito productoelegido:productoelegido
+|productoComprar|
+carrito CargarProductoAcarrito: productoelegido.
+productoComprar :=self buscarElProductoEnSupermercado: productoelegido.
+productoComprar descontarStock: 1.
+!
+
+realizarCompra:listaproductoscarrito
+|preciototal productoconcreto|
+listaproductoscarrito do: [: unproducto | 
+productoconcreto := self buscarElProductoEnSupermercado: unproducto. 
+preciototal:=productoconcreto verPrecio.
+]
+!
 
 verClientes
 |client cont|
@@ -132,20 +136,32 @@ verClientes
 cont:=contador printString.
     Transcript show: cont,' ',client verNombre,' ',client verApellido ;cr ]!
 
+verOferta
+|listaOferta precio idprod|
+Transcript show: 'Lista de Ofertas: ';cr.
+listaOferta := productos select:[:prod| prod verPrecio<35 ].
+listaOferta do: [:unprod | 
+idprod :=unprod  verIdentificadorProducto printString.
+precio :=unprod  verPrecio printString.
+Transcript show: 'id: producto: ',idprod,'     ',unprod verNombreProducto,' precio ',precio;cr.
+]!
+
 verProductos
 	^productos! !
+!Supermercado categoriesFor: #agregarCarrito:!public! !
 !Supermercado categoriesFor: #agregarCliente:!public! !
 !Supermercado categoriesFor: #agregarEmpleado:!public! !
-!Supermercado categoriesFor: #agregarFactura:!public! !
 !Supermercado categoriesFor: #agregarProductoSupermercado:!public! !
 !Supermercado categoriesFor: #buscarElProductoEnSupermercado:!public! !
 !Supermercado categoriesFor: #iniSuperNom:!public! !
 !Supermercado categoriesFor: #listarClientes!public! !
-!Supermercado categoriesFor: #listarProductos!public! !
 !Supermercado categoriesFor: #listarProductosDisponible!public! !
 !Supermercado categoriesFor: #listarProductosIdentificador!public! !
 !Supermercado categoriesFor: #llamarMenuPrincipal!public! !
+!Supermercado categoriesFor: #procesoCargarCarrito:productoelegido:!public! !
+!Supermercado categoriesFor: #realizarCompra:!public! !
 !Supermercado categoriesFor: #verClientes!public! !
+!Supermercado categoriesFor: #verOferta!public! !
 !Supermercado categoriesFor: #verProductos!public! !
 
 !Supermercado class methodsFor!
